<resources>
    <string name="app_name">MADA1</string>
    <string name="title_activity_tracking_details">trackingDetails</string>
    <string name="title_activity_maps">Map</string>
    <string name="thai">Thai</string>
    <string name="button">Button</string>
    <string name="show_on_map">Show on Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="suggest_now">Suggest Now</string>
    <string name="show_map">Show Map</string>
    <string name="no_sugg">NO MORE SUGGESTIONS!</string>
    <string name="add">Add</string>
    <string name="CONNECTIVITY_ACTION">android.net.conn.CONNECTIVITY_CHANGE</string>
    <string name="suggestionFrequency">suggestionFrequency</string>
    <string name="stptime">Stoptime:</string>
    <string name="meetuptime">Meetup Time:</string>
    <string name="edit_tracking">Edit Tracking</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="no_time_selected">No Time Selected</string>
    <string name="set_time">Set Time</string>
    <string name="curry_truck">Curry Truck</string>
    <string name="asian">Asian</string>
    <string name="_1_00_00_pm">1:00:00 PM</string>
    <string name="_10_min">10 min</string>
    <string name="_1_min">1 min</string>
    <string name="_37_8479">-37.8479</string>
    <string name="_144_9554">144.9554</string>
    <string name="remove">Remove</string>
    <string name="show_trackables">Show Trackables</string>
    <string name="add_tracking">Add Tracking</string>
    <string name="my_trackings">MY Trackings</string>
    <string name="main_menu">Main Menu</string>
    <string name="food_truck">Food Truck</string>
    <string name="description">Description</string>
    <string name="https_www_google_com">https://www.google.com</string>
    <string name="next">Next</string>
    <string name="dots">...</string>
    <string name="cancel">Cancel</string>
    <string name="notificationPeriod">notificationPeriod</string>
</resources>
