<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical"
    android:background="@drawable/customborder"
    android:id="@+id/selecttrackingObj">

    <TextView
        android:id="@+id/addtrackableTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curry_truck" />

    <TextView
        android:id="@+id/addtrackablecategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asian"/>

    <TextView
        android:id="@+id/addtrackabletime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_00_00_pm" />

    <TextView
        android:id="@+id/addtrackablestoptime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_min" />

    <TextView
        android:id="@+id/addtrackablelatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_37_8479"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/addtrackablelongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_144_9554"
        android:textStyle="bold|italic" />
</LinearLayout>
